--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.4"
+    "sass": "^1.77.4",
+    "save": "^2.9.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
