--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.4",
-    "save": "^2.9.0"
+    "save": "^2.9.0",
+    "workbox": "^0.0.0",
+    "workbox-cacheable-response": "^7.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.1",
